# ros-noetic-DelftX

./: README.md
hrwros/hrwros_week1/: CMakeLists.txt
hrwros/hrwros_week1/scripts/: s_sensor_info_publisher.py  sensor_info_publisher.py
hrwros_assignments/: README.md
hrwros_assignments/hrwros_week1_assignment/: CMakeLists.txt  package.xml
hrwros_assignments/hrwros_week1_assignment/launch/: hrwros_week1_assignment3.launch  hrwros_week1_assignments1_2.launch
hrwros_assignments/hrwros_week1_assignment/msg/: BoxHeightInformation.msg
hrwros_assignments/hrwros_week1_assignment/scripts/: week1_assignment1_part1.py  week1_assignment1_part3.py  week1_assignment2.py  week1_assignment3.py
hrwros_assignments/hrwros_week2_assignment/urdf/: hrwros_assignment1.xacro  hrwros_assignment2.xacro  hrwros_assignment3.xacro
hrwros_assignments/hrwros_week3_assignment/launch/: amcl_navigation.launch  week3_assignment3_part2.launch
hrwros_assignments/hrwros_week3_assignment/rviz/: hrwros_navigation.rviz
hrwros_assignments/hrwros_week3_assignment/scripts/: week3_assignment3_part1.py
hrwros_support/urdf/: hrwros.urdf  hrwros.xacro
ros1_course_content/all_msgs/: CMakeLists.txt  package.xml
ros1_course_content/all_msgs/action/: CounterWithDelay.action
ros1_course_content/all_msgs/msg/: SensorInformation.msg
ros1_course_content/all_msgs/srv/: ConversionMeterToFeet.srv
ros1_course_content/ros_week1/: CMakeLists.txt  package.xml
ros1_course_content/ros_week1/scripts/: conversion_client.py  conversion_server.py  counter_client.py  counter_server.py  sensor_publisher.py  (+1 more)
